--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -17,14 +17,12 @@ jobs:
             tag: "24"
             service: "graalvm-runtime-24"
             latest: true
-          # Ready for expansion:
-          # - dockerfile: "Dockerfile21"
-          #   tag: "21"
-          #   service: "graalvm-runtime-21"
-          #   latest: false
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -32,14 +30,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build with docker-compose
+      - name: Build with docker compose (v2 syntax)
         run: |
-          docker-compose build ${{ matrix.variant.service }}
+          docker compose build ${{ matrix.variant.service }}
 
       - name: Tag and push
         run: |
-          # Get the built image name from docker-compose
-          image_name=$(docker-compose config | grep "image:" | grep "${{ matrix.variant.service }}" -A 1 | tail -1 | sed 's/.*image: //')
+          # Get the built image name from docker compose
+          image_name=$(docker compose config | grep "image:" | grep "${{ matrix.variant.service }}" -A 1 | tail -1 | sed 's/.*image: //')
           
           # Tag for Docker Hub
           docker tag $image_name rafalohaki/graalvm-minecraft:${{ matrix.variant.tag }}
